# CLS-Argos-Linkit-CORE

./: .gitignore  Dockerfile  Doxyfile  Jenkinsfile  README.md
core/ble_services/: ble_service.hpp  dte_service.hpp  ota_update_service.hpp
core/configuration/: calibration.cpp  calibration.hpp  config_store.hpp  config_store_fs.hpp  gps_config_file.hpp  param_file.hpp  prepass_file.hpp  zone_file.hpp
core/filesystem/: filesystem.hpp  ota_file_updater.cpp  ota_file_updater.hpp  ota_flash_file_updater.cpp  ota_flash_file_updater.hpp
core/hardware/: als_sensor.hpp  artic_device.hpp  battery.hpp  cam.hpp  cdt_sensor.hpp  dfu.hpp  events.hpp  gpio.hpp  gpio_led.hpp  gps.hpp  irq.hpp  led.hpp  memory_access.hpp  ph_sensor.hpp  pmu.hpp  pressure_sensor.hpp  reed.cpp  reed.hpp  rgb_led.hpp  rtc.hpp  sea_temp_sensor.hpp  sensor.cpp  sensor.hpp  spim.hpp  switch.hpp  sws.cpp  sws.hpp  timer.hpp  uart.hpp  uwdetector.cpp  uwdetector.hpp  wchg.hpp
core/interface/: interface.hpp
core/logging/: console_log.hpp  debug.hpp  fs_log.hpp  logger.cpp  logger.hpp  messages.hpp  sensor_log.hpp  sys_log.hpp  system_log.hpp
core/protocol/: base_types.hpp  dte_commands.cpp  dte_commands.hpp  dte_handler.hpp  dte_params.cpp  dte_params.hpp  dte_protocol.hpp
core/scheduling/: argos_scheduler.cpp  argos_scheduler.hpp  comms_scheduler.hpp  gps_scheduler.cpp  gps_scheduler.hpp  interrupt_lock.hpp  location_scheduler.hpp  scheduler.hpp  service_scheduler.hpp  timer.hpp
core/services/: als_sensor_service.hpp  argos_rx_service.cpp  argos_rx_service.hpp  argos_tx_service.cpp  argos_tx_service.hpp  axl_sensor_service.hpp  cam_service.cpp  cam_service.hpp  cdt_sensor_service.hpp  dive_mode_service.hpp  gnss_detector_service.hpp  gps_scheduler.cpp  gps_scheduler.hpp  gps_service.cpp  gps_service.hpp  memory_monitor_service.hpp  ph_sensor_service.hpp  pressure_detector_service.hpp  pressure_sensor_service.hpp  sea_temp_sensor_service.hpp  sensor_service.hpp  service.cpp  service.hpp  sws_service.hpp  uwdetector_service.cpp  uwdetector_service.hpp
core/sm/: error.hpp  gentracker.cpp  gentracker.hpp  ledsm.cpp  ledsm.hpp
core/util/: bch.hpp  binascii.hpp  bitpack.hpp  crc16.hpp  crc32.hpp  crc8.hpp  haversine.cpp  haversine.hpp  ring_buffer.hpp  timeutils.hpp
devices/artic_r2/: artic.cpp  artic.hpp  artic_firmware.hpp  artic_registers.hpp
libraries/CmBacktrace/cm_backtrace/: cm_backtrace.c  cm_backtrace.h  cmb_cfg.h  cmb_def.h
libraries/littlefs/: lfs.c  lfs_util.h
libraries/prepass/: changelog_PREPAS_V3.4.txt
libraries/prepass/prepass_package_code-PREPAS_V3.4/: Doxyfile  Makefile  README.md  main.c  prepas_test_example.dev  previpass.c  previpass.h  previpass_util.c  previpass_util.h
libraries/prepass/prepass_package_code-PREPAS_V3.4/Data/: PrepasConf.txt  PrepasRef.txt
ports/linux/: interrupt_lock.cpp  linux_timer.hpp  main.cpp  pmu.hpp  timer.hpp
ports/nrf52840/: CMakeLists.txt  Makefile  QspiGD25.ini  README.md  gcc_nrf52840.ld  gcc_startup_nrf52840.S  main.c  main.cpp  nrfutil_pkg_key.pem  pmu.hpp  qspi.ini  qspi.ini.old  qspi_rspb.ini  timer.hpp  toolchain_arm_gcc_nrf52.cmake
ports/nrf52840/bootloader/gentracker_secure_bootloader/: GD25Q16C.h  IS25LP128F.h  README.md  dfu_ext_flash.c  dfu_public_key.c  gd25_flash.c  gd25_flash.h  is25_flash.c  is25_flash.h  main.c
ports/nrf52840/bsp/gentracker_v1.0/: bsp.cpp  bsp.hpp  sdk_config.h
ports/nrf52840/bsp/horizon_v4.0/: bsp.cpp  bsp.hpp  sdk_config.h
ports/nrf52840/bsp/rspb_adafruit_feather/: bsp.cpp  bsp.hpp  sdk_config.h
ports/nrf52840/bsp/rspbtracker_v1.0/: LinkIt_rspb_board.hex  LinkIt_rspb_board.img  LinkIt_rspb_board_merged.hex  Makefile  bsp.cpp  bsp.hpp  cmake_install.cmake  sdk_config.h
ports/nrf52840/core/filesystem/: IS25LP128F.hpp  is25_flash.cpp  is25_flash.hpp  is25_flash_file_system.cpp  is25_flash_file_system.hpp  spi_flash_file_system.cpp  spi_flash_file_system.hpp
ports/nrf52840/core/hardware/: fake_led.hpp  fake_rtc.hpp  nrf_battery_mon.cpp  nrf_battery_mon.hpp  nrf_dfu.cpp  nrf_gpio.cpp  nrf_i2c.cpp  nrf_i2c.hpp  nrf_irq.cpp  nrf_irq.hpp  nrf_led.hpp  nrf_memory_access.hpp  nrf_pmu.cpp  nrf_rgb_led.hpp  nrf_rtc.cpp  nrf_rtc.hpp  nrf_spim.cpp  nrf_spim.hpp  nrf_switch.cpp  nrf_switch.hpp  nrf_timer.cpp  nrf_timer.hpp
tests/: CMakeLists.txt
tests/data/: 20230308105834.json  allcast.2.117.06.json  default_aop.json  incorrect_aop.json  mgaoffline.ubx  mgaoffline_nosync.ubx
tests/fakes/: bsp.hpp  fake_battery_mon.hpp  fake_config_store.hpp  fake_gps.hpp  fake_irq.hpp  fake_led.hpp  fake_logger.hpp  fake_memory_access.hpp  fake_reed_switch.hpp  fake_rgb_led.hpp  fake_rtc.hpp  fake_switch.hpp  fake_sws.hpp  fake_timer.hpp  heap.h  memmang.cpp  nrf_err.h  nrf_libuarte_async.cpp  nrf_libuarte_async.h  nrf_uarte.c  nrf_uarte.h  nrfx_gpiote.h  nrfx_rtc.c  nrfx_rtc.h  nrfx_saadc.h  sdk_errors.h
tests/mocks/: mock_ad5933.hpp  mock_als.hpp  mock_argos_tx.hpp  mock_artic.hpp  mock_artic_device.hpp  mock_battery_mon.hpp  mock_ble_serv.hpp  mock_cdt.hpp  mock_comms.hpp  mock_comparators.hpp  mock_config_store.hpp  mock_dfu.cpp  mock_fs.hpp  mock_gpio.cpp  mock_gps.hpp  mock_location.hpp  mock_logger.hpp  mock_m8q.hpp  mock_ms58xx.hpp  mock_ota_file_updater.hpp  mock_ph.hpp  mock_pmu.cpp  mock_rtc.hpp  mock_sea_temp.hpp  mock_sensor.hpp  mock_std_function_comparator.hpp  mock_timer.hpp  mock_wchg.hpp
tests/src/: als_sensor_test.cpp  argos_rx_test.cpp  argos_test.cpp  argos_tx_test.cpp  axl_sensor_test.cpp  bch_test.cpp  calibration_test.cpp  cdt_mock_test.cpp  cdt_sensor_test.cpp  config_store_test.cpp  crc16_test.cpp  crc32_test.cpp  crc8_test.cpp  decoder_test.cpp  dive_mode_test.cpp  dte_handler_test.cpp  encoder_test.cpp  filesystem_test.cpp  gnss_detector_test.cpp  gps_test.cpp  logger_test.cpp  m10_test.cpp  m8_test.cpp  main.cpp  nrf_battery_test.cpp  nrf_switch_test.cpp  nrf_timer_test.cpp  ph_sensor_test.cpp  pressure_sensor_test.cpp  previpass_test.cpp  protocol_test.cpp  scheduler_test.cpp  sea_temp_sensor_test.cpp  sm_test.cpp  sws_test.cpp  timer_test.cpp  ubx_ano_test.cpp
utils/: log_stack_dump.py
(+135 files in other folders)
